Fix contrast of module Add Prereq link in hi-contrast mode
changed the colors to use canvas' theme vars.

fixes CNVS-37544

Test Plan
  - put the user into high contrast mode
  - go to a course's module page
  - click the +Module button
  - check the color contrast of the Add Prerequisite link
  > expect ot to be > 4.5:1

Reviewed-on: https://gerrit.instructure.com/115719
Tested-by: Jenkins
QA-Review: Deepeeca Soundarrajan <dsoundarrajan@instructure.com>
Product-Review: Ed Schiebel <eschiebel@instructure.com>

--- a/app/stylesheets/components/_g_wiki.scss
+++ b/app/stylesheets/components/_g_wiki.scss
@@ -76,12 +76,13 @@ $revision-button-hover-color: $ic-brand-primary;
 }
 
 .add_prerequisite_or_requirement_link {
-  color: #0088cc;
+  color: $ic-link-color;
   border: none;
   background: none;
   padding: 0px;
   &:hover {
-    color: #005580;
+    color: $ic-link-color-hover;
+    background: none;
     text-decoration: underline;
   }
 }
